// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`array fields array 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="ms-Grid-col ms-sm12  field field-array"
    id="root"
    style={
      Object {
        "display": undefined,
        "marginBottom": 15,
      }
    }
  >
    <span
      style={
        Object {
          "float": "right",
        }
      }
    >
      <button
        className="ms-Button ms-Button--commandBar array-item-add root-41"
        data-is-focusable={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        style={
          Object {
            "height": "32px",
          }
        }
        type="button"
      >
        <span
          className="ms-Button-flexContainer flexContainer-42"
          data-automationid="splitbuttonprimary"
        >
          <i
            aria-hidden={true}
            className="ms-Icon root-37 css-49 ms-Button-icon icon-44"
            data-icon-name="Add"
            style={
              Object {
                "fontFamily": "\\"FabricMDL2Icons\\"",
              }
            }
          >
            
          </i>
          <span
            className="ms-Button-textContainer textContainer-43"
          >
            <span
              className="ms-Button-label label-45"
              id="id__0"
            >
              Add Item
            </span>
          </span>
        </span>
      </button>
    </span>
  </div>
  <div>
    <br />
    <div
      className="ms-Grid-col ms-sm12"
    >
      <button
        className="ms-Button ms-Button--primary root-50"
        data-is-focusable={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="submit"
      >
        <span
          className="ms-Button-flexContainer flexContainer-42"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Button-textContainer textContainer-43"
          >
            <span
              className="ms-Button-label label-52"
              id="id__3"
            >
              Submit
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</form>
`;

exports[`array fields array icons 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="ms-Grid-col ms-sm12  field field-array"
    id="root"
    style={
      Object {
        "display": undefined,
        "marginBottom": 15,
      }
    }
  >
    <div
      className="ms-Grid"
      dir="ltr"
    >
      <div
        className="ms-Grid-row"
      >
        <div
          className="ms-Grid-col ms-sm6 ms-md8 ms-lg9"
        >
          <div
            className="ms-Grid-row"
          >
            <div
              className="ms-Grid-col ms-sm12  field field-string"
              id="root_0"
              style={
                Object {
                  "display": undefined,
                  "marginBottom": 15,
                }
              }
            >
              <div
                className="ms-TextField is-required root-55"
              >
                <div
                  className="ms-TextField-wrapper"
                >
                  <div
                    className="ms-TextField-fieldGroup fieldGroup-56"
                  >
                    <input
                      aria-describedby="root_0__error root_0__description root_0__help"
                      aria-invalid={false}
                      autoFocus={false}
                      className="ms-TextField-field field-57"
                      disabled={false}
                      id="root_0"
                      name="root_0"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      onInput={[Function]}
                      placeholder=""
                      readOnly={false}
                      required={true}
                      type="text"
                      value="a"
                    />
                  </div>
                </div>
              </div>
              
            </div>
          </div>
        </div>
        <div
          className="ms-Grid-col ms-sm6 ms-md4 ms-lg3"
          style={
            Object {
              "textAlign": "right",
            }
          }
        >
          <button
            aria-disabled={true}
            className="ms-Button ms-Button--icon is-disabled root-83"
            data-is-focusable={false}
            disabled={true}
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            type="button"
          >
            <span
              className="ms-Button-flexContainer flexContainer-42"
              data-automationid="splitbuttonprimary"
            >
              <i
                aria-hidden={true}
                className="ms-Icon root-37 css-87 ms-Button-icon icon-84"
                data-icon-name="Up"
                style={
                  Object {
                    "fontFamily": "\\"FabricMDL2Icons-0\\"",
                  }
                }
              >
                
              </i>
            </span>
          </button>
          <button
            className="ms-Button ms-Button--icon root-88"
            data-is-focusable={true}
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            type="button"
          >
            <span
              className="ms-Button-flexContainer flexContainer-42"
              data-automationid="splitbuttonprimary"
            >
              <i
                aria-hidden={true}
                className="ms-Icon root-37 css-87 ms-Button-icon icon-51"
                data-icon-name="Down"
                style={
                  Object {
                    "fontFamily": "\\"FabricMDL2Icons-0\\"",
                  }
                }
              >
                
              </i>
            </span>
          </button>
          <button
            className="ms-Button ms-Button--icon root-88"
            data-is-focusable={true}
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            type="button"
          >
            <span
              className="ms-Button-flexContainer flexContainer-42"
              data-automationid="splitbuttonprimary"
            >
              <i
                aria-hidden={true}
                className="ms-Icon root-37 css-89 ms-Button-icon icon-51"
                data-icon-name="Copy"
                style={
                  Object {
                    "fontFamily": "\\"FabricMDL2Icons-2\\"",
                  }
                }
              >
                
              </i>
            </span>
          </button>
          <button
            className="ms-Button ms-Button--icon root-88"
            data-is-focusable={true}
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            type="button"
          >
            <span
              className="ms-Button-flexContainer flexContainer-42"
              data-automationid="splitbuttonprimary"
            >
              <i
                aria-hidden={true}
                className="ms-Icon root-37 css-49 ms-Button-icon icon-51"
                data-icon-name="Delete"
                style={
                  Object {
                    "fontFamily": "\\"FabricMDL2Icons\\"",
                  }
                }
              >
                
              </i>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      className="ms-Grid"
      dir="ltr"
    >
      <div
        className="ms-Grid-row"
      >
        <div
          className="ms-Grid-col ms-sm6 ms-md8 ms-lg9"
        >
          <div
            className="ms-Grid-row"
          >
            <div
              className="ms-Grid-col ms-sm12  field field-string"
              id="root_1"
              style={
                Object {
                  "display": undefined,
                  "marginBottom": 15,
                }
              }
            >
              <div
                className="ms-TextField is-required root-55"
              >
                <div
                  className="ms-TextField-wrapper"
                >
                  <div
                    className="ms-TextField-fieldGroup fieldGroup-56"
                  >
                    <input
                      aria-describedby="root_1__error root_1__description root_1__help"
                      aria-invalid={false}
                      autoFocus={false}
                      className="ms-TextField-field field-57"
                      disabled={false}
                      id="root_1"
                      name="root_1"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      onInput={[Function]}
                      placeholder=""
                      readOnly={false}
                      required={true}
                      type="text"
                      value="b"
                    />
                  </div>
                </div>
              </div>
              
            </div>
          </div>
        </div>
        <div
          className="ms-Grid-col ms-sm6 ms-md4 ms-lg3"
          style={
            Object {
              "textAlign": "right",
            }
          }
        >
          <button
            className="ms-Button ms-Button--icon root-88"
            data-is-focusable={true}
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            type="button"
          >
            <span
              className="ms-Button-flexContainer flexContainer-42"
              data-automationid="splitbuttonprimary"
            >
              <i
                aria-hidden={true}
                className="ms-Icon root-37 css-87 ms-Button-icon icon-51"
                data-icon-name="Up"
                style={
                  Object {
                    "fontFamily": "\\"FabricMDL2Icons-0\\"",
                  }
                }
              >
                
              </i>
            </span>
          </button>
          <button
            aria-disabled={true}
            className="ms-Button ms-Button--icon is-disabled root-83"
            data-is-focusable={false}
            disabled={true}
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            type="button"
          >
            <span
              className="ms-Button-flexContainer flexContainer-42"
              data-automationid="splitbuttonprimary"
            >
              <i
                aria-hidden={true}
                className="ms-Icon root-37 css-87 ms-Button-icon icon-84"
                data-icon-name="Down"
                style={
                  Object {
                    "fontFamily": "\\"FabricMDL2Icons-0\\"",
                  }
                }
              >
                
              </i>
            </span>
          </button>
          <button
            className="ms-Button ms-Button--icon root-88"
            data-is-focusable={true}
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            type="button"
          >
            <span
              className="ms-Button-flexContainer flexContainer-42"
              data-automationid="splitbuttonprimary"
            >
              <i
                aria-hidden={true}
                className="ms-Icon root-37 css-89 ms-Button-icon icon-51"
                data-icon-name="Copy"
                style={
                  Object {
                    "fontFamily": "\\"FabricMDL2Icons-2\\"",
                  }
                }
              >
                
              </i>
            </span>
          </button>
          <button
            className="ms-Button ms-Button--icon root-88"
            data-is-focusable={true}
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            type="button"
          >
            <span
              className="ms-Button-flexContainer flexContainer-42"
              data-automationid="splitbuttonprimary"
            >
              <i
                aria-hidden={true}
                className="ms-Icon root-37 css-49 ms-Button-icon icon-51"
                data-icon-name="Delete"
                style={
                  Object {
                    "fontFamily": "\\"FabricMDL2Icons\\"",
                  }
                }
              >
                
              </i>
            </span>
          </button>
        </div>
      </div>
    </div>
    <span
      style={
        Object {
          "float": "right",
        }
      }
    >
      <button
        className="ms-Button ms-Button--commandBar array-item-add root-41"
        data-is-focusable={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        style={
          Object {
            "height": "32px",
          }
        }
        type="button"
      >
        <span
          className="ms-Button-flexContainer flexContainer-42"
          data-automationid="splitbuttonprimary"
        >
          <i
            aria-hidden={true}
            className="ms-Icon root-37 css-49 ms-Button-icon icon-44"
            data-icon-name="Add"
            style={
              Object {
                "fontFamily": "\\"FabricMDL2Icons\\"",
              }
            }
          >
            
          </i>
          <span
            className="ms-Button-textContainer textContainer-43"
          >
            <span
              className="ms-Button-label label-45"
              id="id__48"
            >
              Add Item
            </span>
          </span>
        </span>
      </button>
    </span>
  </div>
  <div>
    <br />
    <div
      className="ms-Grid-col ms-sm12"
    >
      <button
        className="ms-Button ms-Button--primary root-50"
        data-is-focusable={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="submit"
      >
        <span
          className="ms-Button-flexContainer flexContainer-42"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Button-textContainer textContainer-43"
          >
            <span
              className="ms-Button-label label-52"
              id="id__51"
            >
              Submit
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</form>
`;

exports[`array fields checkboxes 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="ms-Grid-col ms-sm12  field field-array"
    id="root"
    style={
      Object {
        "display": undefined,
        "marginBottom": 15,
      }
    }
  >
    <div
      className="ms-Dropdown-container"
    >
      <div
        aria-describedby="root__error root__description root__help"
        aria-disabled={false}
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-required={false}
        className="ms-Dropdown dropdown-66"
        data-is-focusable={true}
        id="root"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        role="combobox"
        tabIndex={0}
      >
        <span
          className="ms-Dropdown-title ms-Dropdown-titleIsPlaceHolder title-67"
          id="root-option"
        />
        <span
          className="ms-Dropdown-caretDownWrapper caretDownWrapper-68"
        >
          <i
            aria-hidden={true}
            className="ms-Dropdown-caretDown caretDown-82"
            data-icon-name="ChevronDown"
          >
            
          </i>
        </span>
      </div>
    </div>
    
  </div>
  <div>
    <br />
    <div
      className="ms-Grid-col ms-sm12"
    >
      <button
        className="ms-Button ms-Button--primary root-50"
        data-is-focusable={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="submit"
      >
        <span
          className="ms-Button-flexContainer flexContainer-42"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Button-textContainer textContainer-43"
          >
            <span
              className="ms-Button-label label-52"
              id="id__15"
            >
              Submit
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</form>
`;

exports[`array fields empty errors array 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="ms-Grid-col ms-sm12  field field-object"
    id="root"
    style={
      Object {
        "display": undefined,
        "marginBottom": 15,
      }
    }
  >
    
    <div
      className="ms-Grid"
      dir="ltr"
    >
      <div
        className="ms-Grid-row"
      >
        <div
          className="ms-Grid-col ms-sm12  field field-string"
          id="root_name"
          style={
            Object {
              "display": undefined,
              "marginBottom": 15,
            }
          }
        >
          <div
            className="ms-TextField root-55"
          >
            <div
              className="ms-TextField-wrapper"
            >
              <label
                className="ms-Label root-91"
                htmlFor="root_name"
                id="TextFieldLabel62"
              >
                name
              </label>
              <div
                className="ms-TextField-fieldGroup fieldGroup-90"
              >
                <input
                  aria-describedby="root_name__error root_name__description root_name__help"
                  aria-invalid={false}
                  aria-labelledby="TextFieldLabel62"
                  autoFocus={false}
                  className="ms-TextField-field field-57"
                  disabled={false}
                  id="root_name"
                  name="root_name"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onInput={[Function]}
                  placeholder=""
                  readOnly={false}
                  required={false}
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
          
        </div>
      </div>
    </div>
  </div>
  <div>
    <br />
    <div
      className="ms-Grid-col ms-sm12"
    >
      <button
        className="ms-Button ms-Button--primary root-50"
        data-is-focusable={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="submit"
      >
        <span
          className="ms-Button-flexContainer flexContainer-42"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Button-textContainer textContainer-43"
          >
            <span
              className="ms-Button-label label-52"
              id="id__63"
            >
              Submit
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</form>
`;

exports[`array fields fixed array 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="ms-Grid-col ms-sm12  field field-array"
    id="root"
    style={
      Object {
        "display": undefined,
        "marginBottom": 15,
      }
    }
  >
    <div
      className="ms-Grid"
      dir="ltr"
    >
      <div
        className="ms-Grid-row"
      >
        <div
          className="ms-Grid-col ms-sm6 ms-md8 ms-lg9"
        >
          <div
            className="ms-Grid-row"
          >
            <div
              className="ms-Grid-col ms-sm12  field field-string"
              id="root_0"
              style={
                Object {
                  "display": undefined,
                  "marginBottom": 15,
                }
              }
            >
              <div
                className="ms-TextField is-required root-55"
              >
                <div
                  className="ms-TextField-wrapper"
                >
                  <div
                    className="ms-TextField-fieldGroup fieldGroup-56"
                  >
                    <input
                      aria-describedby="root_0__error root_0__description root_0__help"
                      aria-invalid={false}
                      autoFocus={false}
                      className="ms-TextField-field field-57"
                      disabled={false}
                      id="root_0"
                      name="root_0"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      onInput={[Function]}
                      placeholder=""
                      readOnly={false}
                      required={true}
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
              
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="ms-Grid"
      dir="ltr"
    >
      <div
        className="ms-Grid-row"
      >
        <div
          className="ms-Grid-col ms-sm6 ms-md8 ms-lg9"
        >
          <div
            className="ms-Grid-row"
          >
            <div
              className="ms-Grid-col ms-sm12  field field-number"
              id="root_1"
              style={
                Object {
                  "display": undefined,
                  "marginBottom": 15,
                }
              }
            >
              <div
                className="ms-TextField is-required root-55"
              >
                <div
                  className="ms-TextField-wrapper"
                >
                  <div
                    className="ms-TextField-fieldGroup fieldGroup-56"
                  >
                    <input
                      aria-describedby="root_1__error root_1__description root_1__help"
                      aria-invalid={false}
                      autoFocus={false}
                      className="ms-TextField-field field-57"
                      disabled={false}
                      id="root_1"
                      name="root_1"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      onInput={[Function]}
                      placeholder=""
                      readOnly={false}
                      required={true}
                      step="any"
                      type="number"
                      value=""
                    />
                  </div>
                </div>
              </div>
              
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <br />
    <div
      className="ms-Grid-col ms-sm12"
    >
      <button
        className="ms-Button ms-Button--primary root-50"
        data-is-focusable={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="submit"
      >
        <span
          className="ms-Button-flexContainer flexContainer-42"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Button-textContainer textContainer-43"
          >
            <span
              className="ms-Button-label label-52"
              id="id__12"
            >
              Submit
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</form>
`;

exports[`array fields no errors 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="ms-Grid-col ms-sm12  field field-object"
    id="root"
    style={
      Object {
        "display": undefined,
        "marginBottom": 15,
      }
    }
  >
    
    <div
      className="ms-Grid"
      dir="ltr"
    >
      <div
        className="ms-Grid-row"
      >
        <div
          className="ms-Grid-col ms-sm12  field field-string"
          id="root_name"
          style={
            Object {
              "display": undefined,
              "marginBottom": 15,
            }
          }
        >
          <div
            className="ms-TextField root-55"
          >
            <div
              className="ms-TextField-wrapper"
            >
              <label
                className="ms-Label root-91"
                htmlFor="root_name"
                id="TextFieldLabel56"
              >
                name
              </label>
              <div
                className="ms-TextField-fieldGroup fieldGroup-90"
              >
                <input
                  aria-describedby="root_name__error root_name__description root_name__help"
                  aria-invalid={false}
                  aria-labelledby="TextFieldLabel56"
                  autoFocus={false}
                  className="ms-TextField-field field-57"
                  disabled={false}
                  id="root_name"
                  name="root_name"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onInput={[Function]}
                  placeholder=""
                  readOnly={false}
                  required={false}
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
          
        </div>
      </div>
    </div>
  </div>
  <div>
    <br />
    <div
      className="ms-Grid-col ms-sm12"
    >
      <button
        className="ms-Button ms-Button--primary root-50"
        data-is-focusable={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="submit"
      >
        <span
          className="ms-Button-flexContainer flexContainer-42"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Button-textContainer textContainer-43"
          >
            <span
              className="ms-Button-label label-52"
              id="id__57"
            >
              Submit
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</form>
`;
